# office-climate

./: LICENSE  README.md  office-climate.cabal
db/: insert.sql  reset.sql  structure.sql
src/: Main.hs  OfficeClimate.hs  index.html
src/OfficeClimate/: Connection.hs  DeriveJSON.hs  Internal.hs  Place.hs  TemperatureReport.hs  User.hs
test/: OfficeClimateSpec.hs
