Name:                   office-climate
Version:                0.0.1
Author:                 Yuji Yamamoto <whosekiteneverfly@gmail.com>
Maintainer:             Yuji Yamamoto <whosekiteneverfly@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               View how hot / cold your staff feel in your office.
Description:            View how hot / cold your staff feel in your office.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      OfficeClimate
  Other-Modules:        OfficeClimate.Internal
                      , OfficeClimate.Connection
                      , OfficeClimate.Place
                      , OfficeClimate.User
                      , OfficeClimate.TemperatureReport
  Build-Depends:        base >= 4 && < 5
                      , bytestring >= 0.10
                      , warp >= 3.0
                      , apiary >= 1.4
                      , apiary-logger >= 1.4
                      , relational-record >= 0.1
                      , relational-query >= 0.4
                      , relational-query-HDBC
                      , persistable-record
                      , HDBC-postgresql >= 2.3
                      , HDBC >= 2.3
                      , filepath >= 1.1
                      , directory >= 1.2
                      , template-haskell >= 2.2
                      , aeson >= 0.8

executable office-climate
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
  Buildable:            True
  Other-Modules:        OfficeClimate
                      , OfficeClimate.Internal
  GHC-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , bytestring >= 0.10
                      , warp >= 3.0
                      , apiary >= 1.4
                      , apiary-logger >= 1.4
                      , relational-record >= 0.1
                      , relational-query >= 0.4
                      , relational-query-HDBC
                      , persistable-record
                      , HDBC-postgresql >= 2.3
                      , HDBC >= 2.3
                      , filepath >= 1.1
                      , directory >= 1.2
                      , template-haskell >= 2.2
                      , aeson >= 0.8

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , bytestring >= 0.10
                      , warp >= 3.0
                      , apiary >= 1.4
                      , apiary-logger >= 1.4
                      , relational-query >= 0.4
                      , relational-record >= 0.1
                      , relational-query-HDBC
                      , persistable-record
                      , HDBC-postgresql >= 2.3
                      , HDBC >= 2.3
                      , filepath >= 1.1
                      , directory >= 1.2
                      , template-haskell >= 2.2
                      , aeson >= 0.8

Source-Repository head
  Type:                 git
  Location:             https://github.com/igrep/office-climate
